@@ -11,6 +11,7 @@ import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Getter
@@ -18,14 +19,14 @@ import java.util.stream.Collectors;
 @NoArgsConstructor
 @AllArgsConstructor
 public class BlogPostResponseDto {
-    private Long id;
+    private UUID id;
     private String title;
     private String content;
     private String authorName;
     private LocalDateTime dateCreated;
     private List<BlogCommentDto> comments;
     private Set<String> tags;
-    private long userId;
+    private UUID userId;
     private List<String> imageUrls;
 
     public static BlogPostResponseDto fromEntity(BlogPost blogPost) {
@@ -44,7 +45,7 @@ public class BlogPostResponseDto {
         // Map BlogImage entities to URLs
         List<String> imageUrls = blogPost.getImages().stream()
                 .map(BlogImage::getImagePath)
-                .collect(Collectors.toList());
+                .toList();
         response.setImageUrls(imageUrls);
         return response;
     }
